--- a/styles.css
+++ b/styles.css
@@ -190,3 +190,19 @@ img {
   border-radius: 4px;
   color: white;
 }
+
+.footer {
+  background-color: #1f2937;
+  width: 100%;
+  margin: auto;
+}
+
+.credits {
+  width: fit-content;
+  margin: auto;
+  padding: 20px;
+}
+
+.credits p {
+  color: white;
+}
